# Gradient-Descent-Visualizer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
core/: CMakeLists.txt
core/bindings/: CMakeLists.txt  pybind_wrapper.cpp
core/include/gdv/losses/: BinaryCrossEntropy.h  HingeLoss.h  ILossFunction.h  MSELoss.h
core/include/gdv/models/: LogisticRegression.h  SVM.h
core/src/losses/: BinaryCrossEntropy.cpp  HingeLoss.cpp  MSELoss.cpp
core/src/models/: LogisticRegression.cpp  SVM.cpp
core/src/optimizers/: Optimizers.cpp
python/gdv_vis/: data_generator.py  models.py  runner.py  visualizer.py
tests/: test_core.py
