[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "gdv_vis"
version = "0.1.0"
description = "Gradient Descent Visualizer — C++ core with Python bindings"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.py-api = "py3"